Fixing double scrollbar issue on ticket modals

--- a/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -78,7 +78,11 @@ body {
 
 /* modal main */
 
-#main.has-content {
+body.main-has-content {
+  overflow: hidden;
+}
+
+.main-has-content #main {
   position: fixed;
   left: 0;
   top: 0;
